--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,9 @@
     --theme-color : #afafaf;
     --hover-color : #6a6a6a;
 }
+.container {
+    margin: 50px;
+}
 .header {
     text-align: center;
     padding: 100px 0px;
@@ -71,4 +74,45 @@ a:hover {
     background-color: var(--black-theme);
     color : white;
     border: none;
+}
+#slider {
+    position: relative;
+    margin-top: 15px;
+}
+#slider img {
+    background-repeat: no-repeat;
+    background-size: 100%;
+    width: 100%;
+    max-height: 600;
+    display: none;
+}
+.img-active {
+    display: block !important;
+}
+#prev, #next {
+    background-color: white;
+    height: 40px;
+    width: 40px;
+    position: absolute;
+    border:none;
+    border-radius: 20px;
+    cursor : pointer;
+    font-size: 1.5rem;
+    top: 50%;
+    font-weight: bold;
+}
+#prev {
+    left : -15px;
+}
+#next {
+    right: -15px;
+}
+.popular-section {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--black-theme);
+    color : var(--active-color);
+    font-size: 2rem;
+    height: 50px;
 }
