--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,11 @@
     --active-color : white;
     --theme-color : #afafaf;
     --hover-color : #6a6a6a;
+    --example-color : #f7f7f7;
 }
 .container {
     margin: 50px;
+    margin-top : none;
 }
 .header {
     text-align: center;
@@ -114,5 +116,47 @@ a:hover {
     background-color: var(--black-theme);
     color : var(--active-color);
     font-size: 2rem;
-    height: 50px;
+    max-height: 50px;
+}
+.example-part {
+    background-color: var(--example-color);
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    justify-items: center;
+    height: 400px;
+    padding-top: 20px;
+}
+.example-part .each-example {
+    text-align: center;
+    margin: 20px 10px;
+    border-radius: 50%;
+    height: 200px;
+    max-width: 200px;
+}
+.example-part .each-example .example-img {
+    border-radius: 50%;
+    width: 100%;
+}
+.example-explain {
+    display: inline-block;
+    margin-top: 20px; 
+}
+.example-btn {
+    border: none;
+    border-radius: 5px;
+    color : white;
+    background-color: var(--theme-color);
+    margin:15px;
+    min-width: 80px;
+    height: 30px;
+    transition: 0.3s;
+}
+.example-btn:hover {
+    cursor: pointer;
+    background-color: var(--hover-color);
+}
+.info {
+    background-color: var(--example-color);
+    margin-top: 10px;
+    height: 500px;
 }
